Feat: SEO Added for Google

--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sakthivel D - Portfolio</title>
-    <meta name="description"
-        content="Software Developer Portfolio - Passionate full-stack developer with expertise in Java, Go, Vue.js, and Flutter" />
+    <title>Sakthivel D - Software Developer Portfolio</title>
+
+    <!-- ✅ Description for Google -->
+    <meta name="description" content="Explore the portfolio of Sakthivel D, a passionate full-stack software developer skilled in Java, Go, Vue.js, and Flutter.">
+
+    <!-- ✅ Keywords for relevance -->
+    <meta name="keywords" content="Sakthivel D, Java Developer, Go Developer, Full Stack Developer, Vue.js Portfolio, Flutter Developer, Software Engineer, Personal Portfolio, Sakthi Programmer">
+
+    <!-- ✅ Author -->
+    <meta name="author" content="Sakthivel D">
+
+    <!-- ✅ Robots for indexing -->
+    <meta name="robots" content="index, follow">
+
+    <!-- ✅ Canonical link -->
+    <link rel="canonical" href="https://sakthiprogrammer.github.io/Sakthivel-Portfolio/">
+
+    <!-- ✅ Open Graph for social media (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Sakthivel D - Full Stack Developer Portfolio">
+    <meta property="og:description" content="A modern, elegant portfolio showcasing projects in Java, Go, Vue.js, and Flutter.">
+    <meta property="og:image" content="https://sakthiprogrammer.github.io/Sakthivel-Portfolio/docs/preview.png">
+    <meta property="og:url" content="https://sakthiprogrammer.github.io/Sakthivel-Portfolio/">
+    <meta property="og:type" content="website">
+
+    <!-- ✅ Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Sakthivel D - Full Stack Developer Portfolio">
+    <meta name="twitter:description" content="Explore my work in Java, Go, Vue.js, and Flutter. Built with clean code and creativity.">
+    <meta name="twitter:image" content="https://sakthiprogrammer.github.io/Sakthivel-Portfolio/docs/preview.png">
+
+    <!-- ✅ Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
