--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Sakthivel D - Software Developer Portfolio</title>
 
     <!-- ✅ Description for Google -->
-    <meta name="description" content="Explore the portfolio of Sakthivel D, a passionate full-stack software developer skilled in Java, Go, Vue.js, and Flutter.">
+    <meta name="description"
+        content="Explore the portfolio of Sakthivel D, a passionate full-stack software developer skilled in Java, Go, Vue.js, and Flutter.">
 
     <!-- ✅ Keywords for relevance -->
-    <meta name="keywords" content="Sakthivel D, Java Developer, Go Developer, Full Stack Developer, Vue.js Portfolio, Flutter Developer, Software Engineer, Personal Portfolio, Sakthi Programmer">
+    <meta name="keywords"
+        content="Sakthivel D, Java Developer, Go Developer, Full Stack Developer, Vue.js Portfolio, Flutter Developer, Software Engineer, Personal Portfolio, Sakthi Programmer">
 
     <!-- ✅ Author -->
     <meta name="author" content="Sakthivel D">
@@ -23,7 +25,8 @@
 
     <!-- ✅ Open Graph for social media (Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="Sakthivel D - Full Stack Developer Portfolio">
-    <meta property="og:description" content="A modern, elegant portfolio showcasing projects in Java, Go, Vue.js, and Flutter.">
+    <meta property="og:description"
+        content="A modern, elegant portfolio showcasing projects in Java, Go, Vue.js, and Flutter.">
     <meta property="og:image" content="https://sakthiprogrammer.github.io/Sakthivel-Portfolio/docs/preview.png">
     <meta property="og:url" content="https://sakthiprogrammer.github.io/Sakthivel-Portfolio/">
     <meta property="og:type" content="website">
@@ -31,7 +34,8 @@
     <!-- ✅ Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Sakthivel D - Full Stack Developer Portfolio">
-    <meta name="twitter:description" content="Explore my work in Java, Go, Vue.js, and Flutter. Built with clean code and creativity.">
+    <meta name="twitter:description"
+        content="Explore my work in Java, Go, Vue.js, and Flutter. Built with clean code and creativity.">
     <meta name="twitter:image" content="https://sakthiprogrammer.github.io/Sakthivel-Portfolio/docs/preview.png">
 
     <!-- ✅ Favicon -->
@@ -42,7 +46,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
 
 <body>
@@ -85,7 +89,12 @@
                 </p>
 
                 <p class="hero-description">
-                    I specialize in Java, Go, Vue.js, and Flutter, building scalable and modern applications that solve real-world challenges. As a full-stack developer, I’m passionate about writing clean, efficient, and user-focused solutions across web and mobile platforms. I’ve solved 200+ problems on LeetCode, sharpening my problem-solving skills, and I’m always eager to explore new technologies and frameworks. My mission is to transform ideas into powerful, reliable software that makes a real impact
+                    I specialize in Java, Go, Vue.js, and Flutter, building scalable and modern applications that solve
+                    real-world challenges. As a full-stack developer, I’m passionate about writing clean, efficient, and
+                    user-focused solutions across web and mobile platforms. I’ve solved 200+ problems on LeetCode,
+                    sharpening my problem-solving skills, and I’m always eager to explore new technologies and
+                    frameworks. My mission is to transform ideas into powerful, reliable software that makes a real
+                    impact
                 </p>
             </div>
 
@@ -117,7 +126,7 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <h3>Software Developer Executive</h3>
-                        <h4>FLATTRADE</h4>
+                        <h4>FLATTRADE Private Limitted</h4>
                         <span class="timeline-date">Dec 2024 - May 2025 (6 Months) | Chennai, India</span>
                         <ul class="experience-list">
                             <li>Developed and optimized 3+ internal tools using Go APIs and automated email schedulers,
@@ -144,40 +153,26 @@
                 <div class="skill-category animate-on-scroll">
                     <h3>Programming Languages</h3>
                     <div class="skill-tags">
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #f8982020, #f8982010)">
-                            <span class="skill-icon">☕</span>
-                            <span class="skill-name">Java</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/java.svg" alt="Java" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #00ADD820, #00ADD810)">
-                            <span class="skill-icon">🐹</span>
-                            <span class="skill-name">Go</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/go.svg" alt="Go" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #F7DF1E20, #F7DF1E10)">
-                            <span class="skill-icon">🟨</span>
-                            <span class="skill-name">JavaScript</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/javascript.svg" alt="JavaScript" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #E34F2620, #E34F2610)">
-                            <span class="skill-icon">🌐</span>
-                            <span class="skill-name">HTML5</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/html.svg" alt="HTML5" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #1572B620, #1572B610)">
-                            <span class="skill-icon">🎨</span>
-                            <span class="skill-name">CSS3</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/css.svg" alt="CSS3" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #33679120, #33679110)">
-                            <span class="skill-icon">🗄️</span>
-                            <span class="skill-name">SQL</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/mysql.svg" alt="SQL" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #0175C220, #0175C210)">
-                            <span class="skill-icon">🎯</span>
-                            <span class="skill-name">Dart</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/Dart.svg" alt="Dart" class="skill-img">
                         </div>
                     </div>
                 </div>
@@ -185,75 +180,52 @@
                 <div class="skill-category animate-on-scroll">
                     <h3>Frameworks & Libraries</h3>
                     <div class="skill-tags">
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #4FC08D20, #4FC08D10)">
-                            <span class="skill-icon">💚</span>
-                            <span class="skill-name">Vue.js</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/vuejs.svg" alt="Vue.js" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #1867C020, #1867C010)">
-                            <span class="skill-icon">🔷</span>
-                            <span class="skill-name">Vuetify</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/vuetify.svg" alt="Vuetify" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #02569B20, #02569B10)">
-                            <span class="skill-icon">🦋</span>
-                            <span class="skill-name">Flutter</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/flutter.svg" alt="Flutter" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #6DB33F20, #6DB33F10)">
-                            <span class="skill-icon">🍃</span>
-                            <span class="skill-name">Spring Boot</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/spring.svg" alt="Spring Boot" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #7952B320, #7952B310)">
-                            <span class="skill-icon">🅱️</span>
-                            <span class="skill-name">Bootstrap</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/bootstrap.svg" alt="Bootstrap" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #FF6B6B20, #FF6B6B10)">
-                            <span class="skill-icon">🔗</span>
-                            <span class="skill-name">REST APIs</span>
-                        </div>
+                        <!-- <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/restapi" alt="REST APIs" class="skill-img">
+                        </div> -->
                     </div>
                 </div>
 
                 <div class="skill-category animate-on-scroll">
                     <h3>Tools & Technologies</h3>
                     <div class="skill-tags">
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #18171720, #18171710)">
-                            <span class="skill-icon">🐙</span>
-                            <span class="skill-name">Git & GitHub</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/github.svg" alt="Git & GitHub" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #007ACC20, #007ACC10)">
-                            <span class="skill-icon">💻</span>
-                            <span class="skill-name">VS Code</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/vscode.svg" alt="VS Code" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #2C225520, #2C225510)">
-                            <span class="skill-icon">🌑</span>
-                            <span class="skill-name">Eclipse</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/eclipse.png" alt="Eclipse" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #FF6C3720, #FF6C3710)">
-                            <span class="skill-icon">📮</span>
-                            <span class="skill-name">Postman</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/postman.svg" alt="Postman" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #4479A120, #4479A110)">
-                            <span class="skill-icon">🐬</span>
-                            <span class="skill-name">MySQL</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/mysql.svg" alt="MySQL" class="skill-img">
                         </div>
-                        <div class="skill-tag-enhanced"
-                            style="background: linear-gradient(135deg, #6DB33F20, #6DB33F10)">
-                            <span class="skill-icon">🔧</span>
-                            <span class="skill-name">Spring Tool Suite</span>
+                        <div class="skill-tag-enhanced">
+                            <img src="docs/Skills-Icons/spring.svg" alt="Spring Tool Suite" class="skill-img">
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
 
@@ -414,13 +386,8 @@
                     </div>
                 </div>
                 <div class="about-image animate-on-scroll">
-                    <dotlottie-wc
-                    src="https://lottie.host/68601e16-9778-425f-883b-dd96750a963f/xT3EIZ8HdA.lottie"
-                    style="height: 300px;"
-                    speed="0.5"
-                    autoplay
-                    loop
-                    ></dotlottie-wc>
+                    <dotlottie-wc src="https://lottie.host/68601e16-9778-425f-883b-dd96750a963f/xT3EIZ8HdA.lottie"
+                        style="height: 300px;" speed="0.5" autoplay loop></dotlottie-wc>
                 </div>
             </div>
         </div>
@@ -492,10 +459,7 @@
     </footer>
 
     <script src="script.js"></script>
-    <script
-  src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js"
-  type="module"
-></script>
+    <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
 </body>
 
 </html>
