--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <!-- ✅ Author -->
     <meta name="author" content="Sakthivel D">
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js" > </script>
+
+    <script type="text/javascript" >
+        (function () {
+            emailjs.init("U7tCHWLeCTfPsU3fp");
+        })();
+    </script>
+    <script  src="https://cdn.jsdelivr.net/npm/sweetalert2@11" ></script>
+
     <!-- ✅ Robots for indexing -->
     <meta name="robots" content="index, follow">
 
