Feat: Styles Changed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sakthivel D - Software Developer Portfolio</title>
 
+    <link rel="icon" type="image/png" href="docs/image2.png">
     <!-- ✅ Description for Google -->
     <meta name="description"
         content="Explore the portfolio of Sakthivel D, a passionate full-stack software developer skilled in Java, Go, Vue.js, and Flutter.">
@@ -28,6 +29,10 @@
 
     <!-- ✅ Robots for indexing -->
     <meta name="robots" content="index, follow">
+    
+    <!-- ✅ Box icon -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/dist/boxicons.js' rel='stylesheet'>
 
     <!-- ✅ Canonical link -->
     <link rel="canonical" href="https://sakthiprogrammer.github.io/Sakthivel-Portfolio/">
@@ -90,7 +95,7 @@
         <div class="hero-container">
             <div class="hero-content fade-in">
                 <h1 class="hero-title">
-                    Hello, I'm <span class="text-primary">Sakthivel D</span>
+                    Hello, I'm <span class="typing-name text-primary">Sakthivel D</span>
                 </h1>
                 <h2 class="hero-subtitle">Software Developer</h2>
                 <p class="hero-description">
@@ -268,15 +273,11 @@
                 <h3 class="subsection-title animate-on-scroll">Achievements & Profiles</h3>
                 <div class="achievements-grid">
                     <div class="achievement-card animate-on-scroll">
-                        <div class="achievement-icon">
-                            <div class="icon-code">💻</div>
-                        </div>
-                        <h4>LeetCode Profile</h4>
-                        <p>Solved 200+ Problems</p>
-                        <a href="#" class="achievement-link">
-                            <span class="external-link">🔗</span>
-                            Visit Profile
-                        </a>
+                        <iframe
+                            class="leetcode-frame"
+                            src="https://leetcard.jacoblin.cool/Sakthivel_D47?theme=unicorn&extension=activity"
+                            title="LeetCode Profile Card">
+                        </iframe>
                     </div>
                     <div class="achievement-card animate-on-scroll">
                         <div class="achievement-icon">
@@ -410,10 +411,11 @@
                 <div class="contact-info animate-on-scroll">
                     <h3>Let's work together</h3>
                     <p>
-                        I'm always interested in hearing about new opportunities and projects.
-                        Whether you're looking for a developer, have a question, or just want to connect.
+                        I am always open to discussing new opportunities, collaborations, and professional projects. If you are looking for a dedicated developer to contribute to your team or have a project idea that requires technical expertise, I would be glad to connect.
+
+I am passionate about delivering high-quality solutions and continuously improving my skills, and I look forward to exploring how I can add value to your organization.
                     </p>
-                    <div class="contact-details">
+                    <!-- <div class="contact-details">
                         <div class="contact-item">
                             <span class="contact-icon">📧</span>
                             <span>sakthiveld479@gmail.com</span>
@@ -421,21 +423,21 @@
                         <div class="contact-item">
                             <span class="contact-icon">📱</span>
                             <span>+91 9047684797</span>
-                        </div>
+                        </div> 
                         <div class="contact-item">
                             <span class="contact-icon">📍</span>
                             <span>Chennai, India</span>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="social-links">
-                        <a href="#" class="social-link">
-                            <span class="social-icon">🐙</span>
+                        <a href="https://github.com/SakthiProgrammer" class="social-link" target="_blank">
+                            <i class='bx bxl-github'></i>
                         </a>
-                        <a href="#" class="social-link">
-                            <span class="social-icon">💼</span>
+                        <a href="mailto:sakthiveld479@gmail.com" class="social-link" target="_blank">
+                            <i class='bx bxl-gmail'></i>
                         </a>
-                        <a href="#" class="social-link">
-                            <span class="social-icon">🌐</span>
+                        <a href="https://www.linkedin.com/in/sakthiprogrammer/" target="_blank" class="social-link">
+                            <i class='bx bxl-linkedin-square'></i>
                         </a>
                     </div>
                 </div>
