Fix: Education section style changed to time-line

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero-section">
         <div class="hero-container">
-            <div class="hero-content fade-in">
+            <div class="hero-content "> <!--fade-in-->
                 <h1 class="hero-title">
                     Hello, I'm <span class="text-primary">Sakthivel D</span>
                 </h1>
@@ -134,7 +134,7 @@
     </section>
 
     <!-- Experience Section -->
-    <section id="experience" class="section experience">
+    <section id="experience" class="section section-alt">
         <div class="timeline-container">
             <h2 class="section-title animate-on-scroll">Experience</h2> <!--animate-on-scroll-->
             <div class="timeline animate-on-scroll">
@@ -171,7 +171,7 @@
 
 
     <!-- Skills Section -->
-    <section id="skills" class="section section-alt">
+    <section id="skills" class="section ">
         <div class="container">
             <h2 class="section-title animate-on-scroll">Skills</h2>
             <div class="skills-grid">
@@ -285,29 +285,47 @@
     </section>
 
     <!-- Education Section -->
-    <section id="education" class="section">
+    <section id="education" class="section section-alt">
         <div class="container">
             <h2 class="section-title animate-on-scroll">Education</h2>
 
-            <!-- Education Subsection -->
-            <div class="education-subsection">
-                <h3 class="subsection-title animate-on-scroll">Academic Background</h3>
-                <div class="education-grid">
-                    <div class="education-card animate-on-scroll">
-                        <h4>B.sc in Computer Science</h4>
-                        <h5>KK GOVT. ARTS & SCIENCE COLLEGE</h5>
-                        <span class="education-date">2021 - 2024 | CGPA 7.5 / 10</span>
-                        <p>Comprehensive study of computer science fundamentals, programming languages, and software
-                            development practices.</p>
+            <div class="edu-timeline">
+                <div class="edu-item">
+                    <div class="edu-left">
+                        <span class="edu-dot"></span>
                     </div>
-                    <div class="education-card animate-on-scroll">
-                        <h4>HSC - Computer Science</h4>
-                        <h5>GOVT. HR SEC SCHOOL</h5>
-                        <span class="education-date">2019 - 2021 | Cum Per : 82.25</span>
-                        <p>Higher secondary education with focus on computer science and mathematics.</p>
+                    <div class="edu-right">
+                        <!-- <span class="edu-right-arrow"></span> -->
+                        <div clas="right-container-arrow-border"><span class="right-container-arrow"></span></div>
+ 
+                        <div class="edu-card">
+                            <h3>B.Sc in Computer Science</h3>
+                            <h4>KK GOVT. ARTS & SCIENCE COLLEGE</h4>
+                            <span class="edu-date">2021 - 2024 | CGPA 7.5 / 10</span>
+                            <p>Comprehensive study of computer science fundamentals, programming languages, and software
+                                development practices.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="edu-item">
+                    <div class="edu-left">
+                        <span class="edu-dot"></span>
+                    </div>
+                    <div class="edu-right">
+                        <div clas="right-container-arrow-border"><span class="right-container-arrow"></span></div>
+
+                        <!-- <span class="edu-right-arrow"></span> -->
+                        <div class="edu-card">
+                            <h3>HSC - Computer Science</h3>
+                            <h4>GOVT. HR SEC SCHOOL</h4>
+                            <span class="edu-date">2019 - 2021 | Cum Per : 82.25</span>
+                            <p>Higher secondary education with focus on computer science and mathematics.</p>
+                        </div>
                     </div>
                 </div>
             </div>
+
 
             <!-- Achievements & Profiles Section -->
             <div class="achievements-subsection">
@@ -361,7 +379,7 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="section section-alt">
+    <section id="projects" class="section">
         <div class="container">
             <h2 class="section-title animate-on-scroll">Projects</h2>
             <div class="projects-grid">
@@ -405,7 +423,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="section">
+    <section id="about" class="section section-alt">
         <div class="container">
             <h2 class="section-title animate-on-scroll">About Me</h2>
             <div class="about-content">
@@ -444,7 +462,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section section-alt">
+    <section id="contact" class="section">
         <div class="container">
             <h2 class="section-title animate-on-scroll">Contact Me</h2>
             <div class="contact-content">
@@ -455,9 +473,10 @@
                         you are looking for a dedicated developer to contribute to your team or have a project idea that
                         requires technical expertise, I would be glad to connect.
 
-                        I am passionate about delivering high-quality solutions and continuously improving my skills,
-                        and I look forward to exploring how I can add value to your organization.
                     </p>
+                    <p>
+                        I am passionate about delivering high-quality solutions and continuously improving my skills,
+                        and I look forward to exploring how I can add value to your organization.</p>
                     <!-- <div class="contact-details">
                         <div class="contact-item">
                             <span class="contact-icon">📧</span>
