Fix: Education section certificate & profile section style changed

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <div class="edu-right">
                         <!-- <span class="edu-right-arrow"></span> -->
                         <div clas="right-container-arrow-border"><span class="right-container-arrow"></span></div>
- 
+
                         <div class="edu-card">
                             <h3>B.Sc in Computer Science</h3>
                             <h4>KK GOVT. ARTS & SCIENCE COLLEGE</h4>
@@ -328,52 +328,52 @@
 
 
             <!-- Achievements & Profiles Section -->
-            <div class="achievements-subsection">
-                <h3 class="subsection-title animate-on-scroll">Achievements & Profiles</h3>
-                <div class="achievements-grid">
-                    <div class="achievement-card animate-on-scroll">
-                        <iframe class="leetcode-frame"
-                            src="https://leetcard.jacoblin.cool/Sakthivel_D47?theme=unicorn&extension=activity"
-                            title="LeetCode Profile Card">
-                        </iframe>
-                    </div>
-                    <div class="achievement-card animate-on-scroll">
-                        <div class="achievement-icon">
-                            <div class="icon-database">🗄️</div>
-                        </div>
-                        <h4>HackerRank Profile</h4>
-                        <p>Competitive Programming</p>
-                        <a href="#" class="achievement-link">
-                            <span class="external-link">🔗</span>
-                            Visit Profile
-                        </a>
-                    </div>
-                    <div class="achievement-card animate-on-scroll">
-                        <div class="achievement-icon">
-                            <div class="icon-award">🏆</div>
-                        </div>
-                        <h4>Code Ninja Profile</h4>
-                        <p>Coding Challenges</p>
-                        <a href="#" class="achievement-link">
-                            <span class="external-link">🔗</span>
-                            Visit Profile
-                        </a>
-                    </div>
-                </div>
-            </div>
+            <h3 class="subsection-title animate-on-scroll">Achievements & Profiles</h3>
+            <div class="achievements-subsection achievements-slider">
 
-            <!-- Coursework Section -->
-            <div class="coursework-subsection">
-                <h3 class="subsection-title animate-on-scroll">Coursework</h3>
-                <div class="coursework-card animate-on-scroll">
-                    <h4>Java FullStack Development</h4>
-                    <p>SLA, Chennai | Sep 2024 - Jan 2025</p>
-                    <div class="coursework-details">
-                        <span class="coursework-tag">Java (basics)</span>
-                        <span class="coursework-tag">Java Fundamentals</span>
-                        <span class="coursework-tag">Full Stack Development</span>
+                    <!-- LeetCode Card -->
+                    <div class="achievement-card animate-on-scroll">
+                        <div class="achievement-image">
+                            <iframe class="leetcode-frame"
+                                src="https://leetcard.jacoblin.cool/Sakthivel_D47?theme=unicorn&extension=activity"
+                                title="LeetCode Profile Card">
+                            </iframe>
+                        </div>
+                        <div class="achievement-info">
+                            <h4>LeetCode</h4>
+                        </div>
                     </div>
-                </div>
+
+                    <!-- HackerRank Card -->
+                    <div class="achievement-card animate-on-scroll">
+                        <div class="achievement-image">
+                            <img src="https://hrcdn.net/fcore/assets/brand/logo-new-white-green-a5cb16e0ae.svg"
+                                alt="HackerRank Logo">
+                        </div>
+                        <div class="achievement-info">
+                            <h4>HackerRank</h4>
+                        </div>
+                    </div>
+
+                    <!-- Code Ninja Card -->
+                    <div class="achievement-card animate-on-scroll">
+                        <div class="achievement-image">
+                            <img src="https://cdn-icons-png.flaticon.com/512/1055/1055687.png" alt="Code Ninja Logo">
+                        </div>
+                        <div class="achievement-info">
+                            <h4>Code Ninja</h4>
+                        </div>
+                    </div>
+
+                    <!-- hacker rant certificate -->
+                     <div class="achievement-card animate-on-scroll">
+                        <iframe src="https://www.hackerrank.com/certificates/iframe/80f8f666bd94" 
+                            title="HackerRank Java Certificate" 
+                            frameborder="0" 
+                            class="certificate-frame"></iframe>
+                        <h4>Java Certificate</h4>
+                    </div>
+
             </div>
         </div>
     </section>
