Feat: Certificates & Profiles Added

--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
         <div class="container">
             <h2 class="section-title animate-on-scroll">Education</h2>
 
-            <div class="edu-timeline">
-                <div class="edu-item">
+            <div class="edu-timeline animate-on-scroll">
+                <div class="edu-item ">
                     <div class="edu-left">
                         <span class="edu-dot"></span>
                     </div>
@@ -328,12 +328,12 @@
 
 
             <!-- Achievements & Profiles Section -->
-            <h3 class="subsection-title animate-on-scroll">Achievements & Profiles</h3>
-            <div class="achievements-subsection achievements-slider">
+            <h3 class="subsection-title animate-on-scroll">Profiles & Certificates/h3>
+            <div class="achievements-subsection achievements-slider animate-on-scroll">
 
                     <!-- LeetCode Card -->
-                    <div class="achievement-card animate-on-scroll">
-                        <div class="achievement-image">
+                    <div class="achievement-card">
+                         <div class="achievement-image">
                             <iframe class="leetcode-frame"
                                 src="https://leetcard.jacoblin.cool/Sakthivel_D47?theme=unicorn&extension=activity"
                                 title="LeetCode Profile Card">
@@ -344,34 +344,40 @@
                         </div>
                     </div>
 
-                    <!-- HackerRank Card -->
-                    <div class="achievement-card animate-on-scroll">
-                        <div class="achievement-image">
-                            <img src="https://hrcdn.net/fcore/assets/brand/logo-new-white-green-a5cb16e0ae.svg"
-                                alt="HackerRank Logo">
-                        </div>
-                        <div class="achievement-info">
-                            <h4>HackerRank</h4>
-                        </div>
-                    </div>
-
                     <!-- Code Ninja Card -->
-                    <div class="achievement-card animate-on-scroll">
+                    <div class="achievement-card">
+                        <a href="https://www.naukri.com/code360/profile/SakthivelD" target="_blank">
                         <div class="achievement-image">
-                            <img src="https://cdn-icons-png.flaticon.com/512/1055/1055687.png" alt="Code Ninja Logo">
+                            <img src="docs/code-ninja.png" alt="Code Ninja Logo">
                         </div>
+                        </a>
                         <div class="achievement-info">
                             <h4>Code Ninja</h4>
                         </div>
                     </div>
 
                     <!-- hacker rant certificate -->
-                     <div class="achievement-card animate-on-scroll">
-                        <iframe src="https://www.hackerrank.com/certificates/iframe/80f8f666bd94" 
-                            title="HackerRank Java Certificate" 
-                            frameborder="0" 
-                            class="certificate-frame"></iframe>
-                        <h4>Java Certificate</h4>
+                     <div class="achievement-card">
+                        <a href="https://www.hackerrank.com/certificates/80f8f666bd94" target="_blank">
+                        <div class="achievement-image">
+                            <img src="docs/java-hr.png" alt="Java Certificate">
+                        </div>
+                        </a>
+                        <div class="achievement-info">
+                            <h4>Java Certificate</h4>
+                        </div>
+                    </div>
+
+                    <div class="achievement-card">
+                        <a href="https://courses.etrain.skillsnetwork.site/certificates/f42439078b194f929e8c61f540adb0b0" target="_blank">
+                        <div class="achievement-image">
+                            <img src="docs/java-ibm-1.png" alt="Java Certificate">
+                        </div>
+                        </a>
+
+                        <div class="achievement-info">
+                            <h4>Java IBM Certificate</h4>
+                        </div>
                     </div>
 
             </div>
