Fix: Profile & Certificate card width, height fixed

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
 
             <!-- Achievements & Profiles Section -->
-            <h3 class="subsection-title animate-on-scroll">Profiles & Certificates/h3>
+            <h3 class="subsection-title animate-on-scroll">Profiles & Certificates</h3>
             <div class="achievements-subsection achievements-slider animate-on-scroll">
 
                     <!-- LeetCode Card -->
