--- a/index.html
+++ b/index.html
@@ -331,100 +331,99 @@
             <h3 class="subsection-title animate-on-scroll">Profiles & Certificates</h3>
             <div class="achievements-subsection achievements-slider animate-on-scroll">
 
-                    <!-- LeetCode Card -->
-                    <div class="achievement-card">
-                         <div class="achievement-image">
-                            <iframe class="leetcode-frame"
-                                src="https://leetcard.jacoblin.cool/Sakthivel_D47?theme=unicorn&extension=activity"
-                                title="LeetCode Profile Card">
-                            </iframe>
-                        </div>
-                        <div class="achievement-info">
-                            <h4>LeetCode</h4>
-                        </div>
+                <!-- LeetCode Card -->
+                <div class="achievement-card">
+                    <div class="achievement-image">
+                        <iframe class="leetcode-frame iframe-wrapper"
+                            src="https://leetcard.jacoblin.cool/Sakthivel_D47?theme=unicorn&extension=activity"
+                            title="LeetCode Profile Card">
+                        </iframe>
                     </div>
+                    <div class="achievement-info">
+                        <h4>LeetCode</h4>
+                    </div>
+                </div>
 
-                    <!-- Code Ninja Card -->
-                    <div class="achievement-card">
-                        <a href="https://www.naukri.com/code360/profile/SakthivelD" target="_blank">
+                <!-- Code Ninja Card -->
+                <div class="achievement-card">
+                    <a href="https://www.naukri.com/code360/profile/SakthivelD" target="_blank">
                         <div class="achievement-image">
                             <img src="docs/code-ninja.png" alt="Code Ninja Logo">
                         </div>
-                        </a>
-                        <div class="achievement-info">
-                            <h4>Code Ninja</h4>
-                        </div>
+                    </a>
+                    <div class="achievement-info">
+                        <h4>Code Ninja</h4>
                     </div>
+                </div>
 
-                    <!-- hacker rant certificate -->
-                     <div class="achievement-card">
-                        <a href="https://www.hackerrank.com/certificates/80f8f666bd94" target="_blank">
+                <!-- hacker rant certificate -->
+                <div class="achievement-card">
+                    <a href="https://www.hackerrank.com/certificates/80f8f666bd94" target="_blank">
                         <div class="achievement-image">
                             <img src="docs/java-hr.png" alt="Java Certificate">
                         </div>
-                        </a>
-                        <div class="achievement-info">
-                            <h4>Java Certificate</h4>
-                        </div>
+                    </a>
+                    <div class="achievement-info">
+                        <h4>Java Certificate</h4>
                     </div>
+                </div>
 
-                    <div class="achievement-card">
-                        <a href="https://courses.etrain.skillsnetwork.site/certificates/f42439078b194f929e8c61f540adb0b0" target="_blank">
+                <div class="achievement-card">
+                    <a href="https://courses.etrain.skillsnetwork.site/certificates/f42439078b194f929e8c61f540adb0b0"
+                        target="_blank">
                         <div class="achievement-image">
                             <img src="docs/java-ibm-1.png" alt="Java Certificate">
                         </div>
-                        </a>
+                    </a>
 
-                        <div class="achievement-info">
-                            <h4>Java IBM Certificate</h4>
-                        </div>
+                    <div class="achievement-info">
+                        <h4>Java IBM Certificate</h4>
                     </div>
+                </div>
 
             </div>
         </div>
     </section>
 
     <!-- Projects Section -->
+
     <section id="projects" class="section">
         <div class="container">
             <h2 class="section-title animate-on-scroll">Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card animate-on-scroll">
-                    <h3>Online Food Delivery and Restaurant Management System</h3>
-                    <div class="project-tech">
-                        <span class="tech-tag">HTML</span>
-                        <span class="tech-tag">CSS</span>
-                        <span class="tech-tag">Java</span>
-                        <span class="tech-tag">Spring Boot</span>
-                        <span class="tech-tag">MySQL</span>
-                        <span class="tech-tag">Thymeleaf</span>
+            <div class="projects-slider">
+                <!-- Project 1 -->
+                <div class="project-card">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <img src="docs/food-delivery.png" alt="Food Delivery Project">
+                            <h3>Food Delivery System</h3>
+                        </div>
+                        <div class="card-back">
+                            <p>Full-stack web app for restaurants & food ordering with role-based login.</p>
+                            <a href="https://github.com/yourusername/food-delivery" target="_blank" class="github-link">
+                                View on GitHub
+                            </a>
+                        </div>
                     </div>
-                    <ul class="project-features">
-                        <li>Designed a full-stack web application enabling restaurant owners to register and manage
-                            menus with a one-to-many relationship between restaurants and food items.</li>
-                        <li>Developed secure role-based authentication for Admins, Restaurant Owners, and Users using
-                            Spring Security and JPA for entity management.</li>
-                        <li>Implemented dynamic and responsive user interfaces using Thymeleaf templates for restaurant
-                            listing, cart functionality, and admin dashboard.</li>
-                    </ul>
                 </div>
-                <div class="project-card animate-on-scroll">
-                    <h3>Car Rental System (Console-Based Application)</h3>
-                    <div class="project-tech">
-                        <span class="tech-tag">Java (OOPs)</span>
-                        <span class="tech-tag">JDBC API</span>
-                        <span class="tech-tag">MySQL</span>
+
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <img src="docs/car-rental.png" alt="Car Rental Project">
+                            <h3>Car Rental System</h3>
+                        </div>
+                        <div class="card-back">
+                            <p>Console-based Java app with JDBC and MySQL for renting cars.</p>
+                            <a href="https://github.com/yourusername/car-rental" target="_blank" class="github-link">
+                                View on GitHub
+                            </a>
+                        </div>
                     </div>
-                    <ul class="project-features">
-                        <li>Built a console-based car rental system in Java using JDBC, applying key Object-Oriented
-                            Programming principles such as inheritance, encapsulation, and abstraction.</li>
-                        <li>Implemented functionality for users to rent, return, and manage cars, while admins can
-                            perform CRUD operations on the car inventory and manage admin accounts.</li>
-                        <li>Integrated a booking history tracker that logs rentals with timestamps and user details,
-                            enhancing transparency and traceability.</li>
-                    </ul>
                 </div>
             </div>
+
         </div>
     </section>
 
